<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_ledger"
        android:icon="@drawable/ic_wallet"
        android:title="@string/nav_personal" />
    <item
        android:id="@+id/nav_groups"
        android:icon="@drawable/ic_group"
        android:title="@string/nav_group" />
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifs" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
